updated .gitignore file to ignore IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Folders #
+##########
+.idea/
+
+# IDE created files #
+#####################
+*.iml
+
 # Compiled source #
 ###################
 *.com
